[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cascade"
version = "0.1.0"
description = "Stateful orchestrator for autonomous DevOps agents. Stop re-reasoning. Start resuming."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "Cascade Contributors" }]
keywords = ["ai", "agents", "devops", "orchestration", "llm", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    # Core
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Storage
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",
    # CLI
    "typer>=0.12",
    "rich>=13.7",
    # Serialization
    "orjson>=3.10",
    # Async + HTTP
    "httpx>=0.27",
    "anyio>=4.4",
    # Tenacity for retry logic
    "tenacity>=8.5",
    # Hashing + utils
    "xxhash>=3.4",
]

[project.optional-dependencies]
ai = [
    # LLM gateway
    "litellm>=1.40",
    # LangGraph workflow engine
    "langgraph>=1.0",
    "langchain-core>=0.2",
    # Repo + AST tools (stdlib ast module used — no extra needed)
    "gitpython>=3.1",
]
sandbox = [
    # Docker SDK for sandboxed test execution
    "docker>=7.1",
]
s3 = [
    # S3 / MinIO backend
    "boto3>=1.34",
    "botocore>=1.34",
]
github = [
    # GitHub PR creation
    "PyGithub>=2.3",
]
api = [
    # FastAPI REST + WebSocket server
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
]
observability = [
    "opentelemetry-sdk>=1.25",
    "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
    "prometheus-client>=0.20",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "ipython>=8.25",
    "python-dotenv>=1.0",
]
all = [
    "cascade[ai,sandbox,s3,github,api,observability,dev]",
]

[project.scripts]
cascade = "cascade.cli:app"

[project.urls]
Repository = "https://github.com/your-org/cascade"
Documentation = "https://cascade.dev/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["cascade*"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "W", "F", "I", "N", "UP", "ANN", "S", "B", "A", "COM", "C4", "DTZ", "ISC", "G", "PIE", "T20", "PYI", "RSE", "RET", "SIM", "TID", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "PERF", "FURB", "LOG", "RUF"]
ignore = ["ANN101", "ANN102", "ANN401", "COM812", "ISC001", "TRY003", "S101"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --cov=cascade --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["cascade"]
omit = ["tests/*", "examples/*"]
